# bluerov2_gym

./: README.md  __init.py__  bluerov_env.py  pyproject.toml  setup.py  test.py  train.py
bluerov2_gym/envs/: bluerov_env.py
docs/: README.md
examples/: test.py
simulation_gym/: .gitignore  pyproject.toml  setup.py
simulation_gym/bluerov2_gym/: __init__.py
simulation_gym/bluerov2_gym/envs/: __init__.py  bluerov_env.py
simulation_gym/bluerov2_gym/envs/core/: dynamics.py  rewards.py
simulation_gym/bluerov2_gym/envs/core/visualization/: renderer.py
simulation_gym/examples/: test.py
