[project]
name = "bluerov2-gym"
version = "0.1.0"
description = "OpenAI Gym environment for the BlueROV2 underwater vehicle"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium==0.29.1",
    "meshcat>=0.3.2",
    "numpy>=2.1.3",
    "scipy>=1.14.1",
    "stable-baselines3[extra]>=2.3.2",
]
