[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bluerov2_gym"
version = "0.1.0"
description = "OpenAI Gym environment for the BlueROV2 underwater vehicle"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "gymnasium>=0.29.1",
    "meshcat>=0.3.2",
    "numpy>=2.1.3",
    "scipy>=1.14.1",
    "stable-baselines3[extra]>=2.3.2",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
bluerov2_gym = ["assets/*"]
